--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": ">=6.5",
-        "laravel/laravel": ">=5.5",
+        "codicastudio/masterbase": ">=5.5",
         "orchestra/testbench": ">=3.5",
         "guzzlehttp/guzzle": ">=6.0",
         "docusign/esign-client": ">=2.0",
